# udp-file-transfer

./: CMakeLists.txt  config.c  config.h  config.json
client/: main.c
server/: main.c
